Float32x4 added, still segfaulting when argc is not 0,1, or 4

--- a/js/src/Makefile.in
+++ b/js/src/Makefile.in
@@ -60,6 +60,10 @@ DEFINES += -DENABLE_PARALLEL_JS
 endif
 
 ifdef NIGHTLY_BUILD
+DEFINES += -DENABLE_ECMA_SIMD
+endif
+
+ifdef NIGHTLY_BUILD
 DEFINES += -DENABLE_BINARYDATA
 endif
 
